feat: add cancellation and withdrawal to public flow
